Style form submit section and add image sidebar

--- a/styles.css
+++ b/styles.css
@@ -4,25 +4,38 @@
     padding: 0;
 }
 
+.container {
+    display: flex;
+    gap: 0;
+}
+
+img {
+    height: 100vh;
+}
+
 form {
     width: 900px;
     display: flex;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    flex: 1;
 }
 
 .form-header, .form-submit {
-    background-color: #f7f7f7
+    background-color: #f7f7f7;
+    flex: 2;
 }
 
 .form-header {
+    flex: 1;
     padding: 100px 80px 45px 35px;
     font-size: 24px;
     font-weight: bold;
 }
 
 .form-header p {
-    margin-right: 40px;
+    margin-right: 250px;
 }
 
 .form-header p:first-child {
@@ -84,4 +97,17 @@ input[type=tel]:focus {
     border: none;
     border-radius: 6px;
     cursor: pointer;
+    margin-top: 5px;
+    margin-bottom: 30px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.301);
+}
+
+.form-submit p {
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.form-submit a {
+    color: #596D48;
+    text-decoration: none;
 }
