--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -9,15 +10,33 @@
     gap: 0;
 }
 
-img {
+.image-container {
+    position: relative;
     height: 100vh;
+}
+
+img {
+    height: 100%;
+}
+
+
+.image-container p {
+    position: absolute;
+    bottom: 2%;
+    left: 26%;
+    color: white;
+    font-size: 2vh;
+}
+
+.image-container p a:active,
+.image-container p a:visited {
+    color: white;
 }
 
 form {
     width: 900px;
     display: flex;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
     flex: 1;
 }
