--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@
 
 .container {
     display: flex;
-    gap: 0;
 }
 
 .image-container {
@@ -121,7 +120,8 @@ form {
 
 input[type=text]:focus,
 input[type=email]:focus,
-input[type=tel]:focus {
+input[type=tel]:focus,
+input[type=password]:focus {
     border: 1px solid blue;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.301);
 }
