--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,14 @@ input[type=password]:focus {
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.301);
 }
 
+.form-main .error-msg {
+    font-size: 12px;
+    font-weight: normal;
+    color: red;
+    padding-top: 2px;
+    visibility: hidden;
+}
+
 .form-submit {
     padding: 20px 35px;
 }
